# Mini_Lpp

./: CMakeLists.txt
src/: ast.cpp  main.cpp  memoryHandler.cpp
src/generators/: ast.tc  ast_OperationsCode.tc  ast_dosemantics.tc  ast_generateCode.tc  ast_generateStatements.tc  ast_generateVarDecl.tc  ast_nodes.tc  ast_tostring.tc  lex.re  lexer_gen.yy.l  operations_getoper.tc  parser_gen.y  parser_gen_lemon.out  parser_gen_lemon.y
src/hdrs/: ast.hpp  common.hpp  lexer.hpp  memoryHandler.hpp  parser.hpp  parser_lemon.hpp
tests/: Buscaminas_elvin.lpp  endlinetest.lpp  funcion.lpp  lea.lpp  testing.lpp
